<resources>
    <string name="app_name">HappyShop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- MENU -->
    <string name="action_settings">Settings</string>
    <string name="action_shopping_cart">Shopping Cart</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_cart">Cart</string>

    <!-- PRODUCTS -->
    <string name="text_title_category">Categories</string>
    <string name="text_product_name">Name</string>
    <string name="text_product_price">Price</string>
    <string name="text_product_quantity">Qty:</string>
    <string name="text_product_on_sale">ON SALE</string>
    <string name="text_product_description">Description</string>
    <string name="text_product_added_to_cart">Item added to Cart</string>

    <!-- NETWORK ERROR -->
    <string name="text_alert_no_network">You are not connected to internet. Please enable mobile data or wifi</string>
    <string name="text_try_again">Click to try again</string>
    <!-- BUTTON -->
    <string name="text_btn_add_to_cart">Add To Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
