<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="@color/color_white"
    android:orientation="horizontal"
    android:padding="@dimen/item_cart_product_padding">

    <ImageView
        android:id="@+id/img_preview"
        android:layout_width="@dimen/item_image_list_thumbnail"
        android:layout_height="@dimen/item_image_list_thumbnail"
        android:src="@drawable/ic_thumbnail_img_24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_image_list_thumbnail"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/img_remove"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_product_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_remove"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:padding="@dimen/item_product_padding"
            android:src="@drawable/btn_close" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_name"
            android:text="@string/text_product_price" />

        <TextView
            android:id="@+id/tv_quantity"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/text_product_quantity"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>

</LinearLayout>